SLING-6937 - Referrer Filter: Allow Regex User Agent Exclusions
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1798584 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -27,6 +27,9 @@
 referrer.name = Apache Sling Referrer Filter
 referrer.description = Request filter checking the referrer of modification requests.
 
+exclude.agents.regexp.name = Exclude Regexp User Agent
+exclude.agents.regexp.description = List of regexp for user agents not to check the referrer.
+
 allow.empty.name = Allow Empty
 allow.empty.description = Allow an empty or missing referrer
 
