--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,12 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+            <scope>provided</scope>
+        </dependency>
         <!--  Testing -->
         <dependency>
             <groupId>junit</groupId>
