--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
             <version>3.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.webconsole</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
         <!--  Testing -->
         <dependency>
             <groupId>junit</groupId>
