--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.security</artifactId>
-    <version>1.1.7-SNAPSHOT</version>
+    <version>1.1.8</version>
     <packaging>bundle</packaging>
 
     <name>Apache Sling Security</name>
@@ -40,7 +40,8 @@
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-security.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-security.git</developerConnection>
         <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-security.git</url>
-    </scm>
+      <tag>org.apache.sling.security-1.1.8</tag>
+  </scm>
 
     <build>
         <plugins>
