--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
                 <configuration>
                     <instructions>
                         <Require-Capability>
-                            osgi.implementation;filter:="(&amp;(osgi.implementation=osgi.http)(version=1.0))"
+                            osgi.implementation;filter:="(&amp;(osgi.implementation=osgi.http)(version&gt;=1.0)(!(version&gt;=2.0)))"
                         </Require-Capability>
                     </instructions>
                 </configuration>
