--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.security</artifactId>
-    <version>1.1.24</version>
+    <version>1.1.25-SNAPSHOT</version>
 
     <name>Apache Sling Security</name>
     <description>
@@ -43,7 +43,7 @@
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-security.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-security.git</developerConnection>
         <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-security.git</url>
-      <tag>org.apache.sling.security-1.1.24</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <dependencies>
