--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     </description>
 
     <properties>
-        <project.build.outputTimestamp>1</project.build.outputTimestamp>
+        <project.build.outputTimestamp>1685080333</project.build.outputTimestamp>
     </properties>
 
     <scm>
