--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-security.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-security.git</developerConnection>
-        <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-security.git</url>
+        <url>https://github.com/apache/sling-org-apache-sling-security.git</url>
       <tag>HEAD</tag>
   </scm>
 
